# ipld-schema-rs

./: .gitignore  Cargo.toml  README.md
ipld-schema/: Cargo.toml  schema.pest
ipld-schema-convert/: Cargo.toml
ipld-schema-convert/src/: lib.rs
ipld-schema/src/: bytes.rs  comment.rs  enumerate.rs  lib.rs  list.rs  map.rs  parse.rs  primitives.rs  representation.rs  structural.rs  unit.rs
ipld-schema/src/parse/: comment.rs  enumerate.rs  primitives.rs  representation.rs
ipld-schema/test/: enums.ipldsch  example.ipldsch  hashmap.ipldsch  list.ipldsch  maps.ipldsch  primitive.ipldsch  struct.ipldsch
nom-diagnostic/: Cargo.toml
nom-diagnostic/examples/: url.rs
nom-diagnostic/src/: lib.rs  traits.rs
