[package]
name = "ipld-schema"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
license = { workspace = true }

[dependencies]
nom = { version = "7.1.3" }

nom-diagnostic = { path = "../nom-diagnostic" }

strum = { version = "0.24.1" }
strum_macros = { version = "0.24.3" }
thiserror = { workspace = true }