[package]
name = "ipld-schema"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
publish = { workspace = true }
categories = { workspace = true }
license = { workspace = true }

[dependencies]
pest = { version = "2.7.1" }
pest_derive = { version = "2.7.1" }

thiserror = { workspace = true }